# planing_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  go.mod
.github/workflows/: ci-cd.yml  ci.yml  deploy.yml  model-train.yml
cmd/bot/: main.go
deploy/: docker-compose.prod.yml
deploy/loki/: loki.yml
deploy/nginx/: default.conf
deploy/prometheus/: prometheus.yml
deploy/promtail/: promtail.yml
internal/assignee/: resolver.go  resolver_test.go
internal/config/: config.go  config_test.go
internal/domain/: domain.go
internal/logging/: logger.go  logger_test.go
internal/metrics/: metrics.go  metrics_test.go  server.go
internal/mlparser/: client.go  client_test.go
internal/parser/: parser.go  parser_test.go
internal/scheduler/: scheduler.go  scheduler_test.go
internal/service/: observed_store.go  parse_validation.go  redaction.go  service.go  service_test.go
migrations/: 001_init.down.sql  001_init.up.sql  002_recurring_tasks.down.sql  002_recurring_tasks.up.sql  003_profile_links.down.sql  003_profile_links.up.sql  migrations_test.go
model-service/: .dockerignore  Dockerfile  README.md  pyproject.toml
model-service/datasets/planning_ru/: README.md
model-service/scripts/: generate_planning_dataset.py
model-service/src/message_parser/: __init__.py  api.py  category_rules.py  data.py  evaluate.py  model.py  normalizer.py  predict.py  schemas.py  time_rules.py  title_extractor.py  train.py
model-service/tests/: test_response_contract.py  test_time_rules.py  test_title_extractor.py
(+9 files in other folders)
