[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "planner-message-parser"
version = "0.1.0"
description = "Russian planning message parser model service"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110,<1.0",
    "joblib>=1.3,<2.0",
    "pydantic>=2.6,<3.0",
    "scikit-learn>=1.4,<1.7",
    "uvicorn[standard]>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
